// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container it mounts <Container /> 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

@media (min-width:34em) {
  .c0 {
    max-width: 34rem;
  }
}

@media (min-width:48em) {
  .c0 {
    max-width: 45rem;
  }
}

@media (min-width:62em) {
  .c0 {
    max-width: 60rem;
  }
}

@media (min-width:75em) {
  .c0 {
    max-width: 72.25rem;
  }
}

<div
  class="c0"
/>
`;

exports[`Container it mounts <Container component="span" /> 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

@media (min-width:34em) {
  .c0 {
    max-width: 34rem;
  }
}

@media (min-width:48em) {
  .c0 {
    max-width: 45rem;
  }
}

@media (min-width:62em) {
  .c0 {
    max-width: 60rem;
  }
}

@media (min-width:75em) {
  .c0 {
    max-width: 72.25rem;
  }
}

<span
  class="c0"
/>
`;

exports[`Container it mounts <Container fluid /> 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

<div
  class="rick-morty c0"
  style="color: purple;"
/>
`;

exports[`Container it overrides the default component as a component 1`] = `<div />`;
